# wl-tray-bridge

./: .gitignore  Cargo.toml  README.md  ext-tray-v1.xml  tray-v1.xml
.github/workflows/: rustfmt.yml  test.yml
bussy/: Cargo.toml  README.md
bussy/src/: lib.rs
src/: cli.rs  default.toml  main.rs  settings.rs  sni.rs  wayland.rs
src/sni/: host.rs  watcher.rs
src/sni/host/: item.rs  menu.rs
src/wayland/: item.rs  scale.rs  seat.rs  sni_proxy.rs  tray.rs  utils.rs
src/wayland/tray/: item.rs  protocols.rs
src/wayland/tray/item/: icon.rs  menu.rs  tooltip.rs
